--- a/about.html
+++ b/about.html
@@ -1,5 +1,33 @@
-<section class="about">
-  <h2>About Hannah Kim</h2>
-  <p>Hi — I’m Hannah Kim, a student at the University of Pittsburgh studying digital media and culture. I spend a lot of time in online spaces like Valorant and YouTube, where humor, aesthetics, and connection blend together. This portfolio captures what it feels like to live in that world — to be energized by digital culture yet constantly wired in.</p>
-  <p>Through my projects, I explore how online media shapes emotion, identity, and community. I hope visitors recognize themselves in these pieces and reflect on the tension between loving and being overwhelmed by our screens.</p>
-</section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About | Hannah Kim</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <nav class="navbar">
+    <h1 class="logo"><a href="index.html">HK</a></h1>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html" class="active">About</a></li>
+      <li><a href="project1.html">Project 1</a></li>
+      <li><a href="project2.html">Project 2</a></li>
+    </ul>
+  </nav>
+
+  <main class="content">
+    <h2>About Hannah Kim</h2>
+    <img src="images/hannah.png" alt="Photo of Hannah Kim" class="about-photo">
+    <p>Hi!! I’m Hannah Kim, a student at the University of Pittsburgh studying digital media, Computer Science, and Data Science. I spend a lot of time in online spaces like Valorant and YouTube, where humor, aesthetics, and connection blend together.</p>
+    <p>My work explores how digital media shapes emotion, identity, and community. I’m fascinated by how online environments can be both exhilarating and exhausting and how we find belonging and meaning in the same spaces that overwhelm us.</p>
+    <p>This portfolio represents my attempt to capture that paradox: being deeply online yet self-aware about its effects.</p>
+  </main>
+
+  <footer>
+    <p>© 2025 Hannah Kim | University of Pittsburgh</p>
+  </footer>
+</body>
+</html>
