--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <nav class="navbar">
-    <h1 class="logo">HK</h1>
+    <h1 class="logo"><a href="index.html">HK</a></h1>
     <ul>
       <li><a href="index.html" class="active">Home</a></li>
       <li><a href="about.html">About</a></li>
@@ -18,13 +18,51 @@
     </ul>
   </nav>
 
+  <!-- Hero section -->
   <section class="hero">
-    <h2>Digital Culture, Hype & Overload</h2>
-    <p class="tagline">Exploring how the media we love shapes who we are.</p>
-    <div class="links">
-      <a href="project1.html" class="btn">Valorant Analysis</a>
-      <a href="project2.html" class="btn alt">Digital Overload Collage</a>
+    <div class="hero-overlay"></div>
+    <div class="hero-text">
+      <h2>Digital Culture, Hype & Overload</h2>
+      <p>Exploring how the media we love shapes who we are. From the adrenaline of gaming culture to the fatigue of endless digital noise.</p>
+      <div class="hero-buttons">
+        <a href="project1.html" class="btn">Valorant Analysis</a>
+        <a href="project2.html" class="btn">Digital Overload Collage</a>
+      </div>
     </div>
   </section>
+
+  <!-- About the Portfolio -->
+  <section class="about-portfolio">
+    <h3>About This Portfolio</h3>
+    <p>This site brings together my work as a digital media creator. Each project reflects my experience living deeply online : where hype, humor, exhaustion, and creativity collide. I designed this space to feel immersive and reflective, blending esports visuals with the introspection of media critique.</p>
+  </section>
+
+  <!-- Featured Projects -->
+  <section class="featured-projects">
+    <h3>Featured Projects</h3>
+    <div class="project-grid">
+      <div class="project-card">
+        <img src="images/valorant_paris.jpg" alt="Valorant Champions Analysis">
+        <h4>Born to Burn | Valorant Analysis</h4>
+        <p>A digital rhetorical study of Riot Games’ <em>Valorant Champions Paris</em> teaser — how hype becomes love.</p>
+        <a href="project1.html" class="btn">View Project</a>
+      </div>
+      <div class="project-card">
+        <img src="images/Kim_VisualArgument.jpg" alt="Digital Overload Collage">
+        <h4>Digital Overload | Visual Argument</h4>
+        <p>A collage exploring how connection turns to consumption in online spaces — where attention becomes currency.</p>
+        <a href="project2.html" class="btn">View Project</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Closing Quote -->
+  <section class="quote">
+    <blockquote> We are both the creators and the creations of our digital world.</blockquote>
+  </section>
+
+  <footer>
+    <p>© 2025 Hannah Kim | University of Pittsburgh</p>
+  </footer>
 </body>
 </html>
