--- a/project1.html
+++ b/project1.html
@@ -1,5 +1,83 @@
-<section class="project">
-  <h2>Project 1 | Digital Rhetorical Analysis</h2>
-  <p>This analysis breaks down the 2023 Valorant Champions Teaser as a rhetorical artifact that uses music, motion, and team imagery to build hype and community. It argues that Riot Games transforms competitive energy into a shared emotional ritual for fans and players alike.</p>
-  <a href="link-to-essay" target="_blank" class="btn">Read Full Essay</a>
-</section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Project 1 | Valorant Analysis</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <nav class="navbar">
+    <h1 class="logo"><a href="index.html">HK</a></h1>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="project1.html" class="active">Project 1</a></li>
+      <li><a href="project2.html">Project 2</a></li>
+    </ul>
+  </nav>
+
+  <main class="content">
+    <h2>Project 1 | Digital Rhetorical Analysis</h2>
+    <div class="header-image">
+      <img src="images/valorant_paris.jpg" alt="Valorant Champions Paris 2025 Banner">
+    </div>
+    <h3>Read the Full Essay</h3>
+
+    <div class="pdf-container">
+      <iframe 
+        src="files/BornToBurnFinal.pdf" 
+        width="100%" 
+        height="800px"
+        style="border: none; box-shadow: 0 0 15px #00ffff; border-radius: 10px;">
+      </iframe>
+    </div>
+
+    <section class="essay-summary">
+      <h3>Main Argument Summary</h3>
+      <p><strong>Thesis:</strong> Riot Games’ <em>Born to Burn | VALORANT Champions Paris</em> teaser reframes esports competition not as combat but as an act of love and devotion. By combining multilingual dialogue, symbolic imagery, and emotional storytelling, Riot transforms competitive gaming into a global ritual of passion, sacrifice, and community. The video persuades audiences through <strong>ethos</strong> (credibility), <strong>pathos</strong> (emotion), and <strong>logos</strong> (logic) to see esports as both art and shared culture.</p>
+    </section>
+
+    <section class="essay-chart">
+      <h3>The Five Stages of Love in "Born to Burn"</h3>
+      <table class="essay-table">
+        <tr>
+          <th>Stage</th>
+          <th>Description</th>
+          <th>Symbolism / Imagery</th>
+        </tr>
+        <tr>
+          <td><strong>1. Loss & Sacrifice</strong></td>
+          <td>Love begins through pain and defeat, showing devotion in hardship.</td>
+          <td>“Tomber amoureux” (fall in love); slow-motion shots of loss.</td>
+        </tr>
+        <tr>
+          <td><strong>2. Revenge & Resolution</strong></td>
+          <td>Love becomes fierce commitment and artistry through redemption.</td>
+          <td>Museum scene equating gameplay to fine art.</td>
+        </tr>
+        <tr>
+          <td><strong>3. New Beginnings</strong></td>
+          <td>Love renews with change and regeneration.</td>
+          <td>Flower fields and narration: “Love blooms with new beginnings.”</td>
+        </tr>
+        <tr>
+          <td><strong>4. Brotherhood</strong></td>
+          <td>Love deepens through shared mentorship and team unity.</td>
+          <td>Paris café scene—players bonding across generations.</td>
+        </tr>
+        <tr>
+          <td><strong>5. Shared Fire</strong></td>
+          <td>Individual passion becomes collective purpose and community.</td>
+          <td>Final montage and voiceover: “It unites a single ember into a shared fire.”</td>
+        </tr>
+      </table>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Hannah Kim | University of Pittsburgh</p>
+  </footer>
+</body>
+</html>
