--- a/project2.html
+++ b/project2.html
@@ -1,6 +1,87 @@
-<section class="project">
-  <h2>Project 2 | Visual Argument: Digital Overload</h2>
-  <img src="images/digital-overload.jpg" alt="Digital Overload Collage" class="project-img">
-  <p>“Digital Overload” visualizes the experience of being constantly online — flooded with notifications, memes, and ads. It juxtaposes bright color bursts and cluttered layouts to mirror the chaotic beauty of internet life. The goal is to capture both the addictive energy and mental fatigue of scroll culture.</p>
-  <a href="link-to-full-collage" target="_blank" class="btn">View Collage</a>
-</section>
+<!DOCTYPE html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Project 2 | Digital Overload</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <nav class="navbar">
+    <h1 class="logo"><a href="index.html">HK</a></h1>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="project1.html">Project 1</a></li>
+      <li><a href="project2.html" class="active">Project 2</a></li>
+    </ul>
+  </nav>
+
+  <main class="content">
+    <h2>Project 2 | Visual Argument: Digital Overload</h2>
+
+    <!-- Artwork image -->
+    <div class="header-image">
+      <img src="images/Kim_VisualArgument.jpg" alt="Digital Overload artwork by Hannah Kim">
+    </div>
+
+    <h3>Read the Full Essay</h3>
+    <div class="pdf-container">
+      <iframe
+        src="files/Digital Overload Project (2) (1).pdf"
+        width="100%"
+        height="800px"
+        style="border: none; box-shadow: 0 0 15px #00ffff; border-radius: 10px;">
+      </iframe>
+    </div>
+
+    <section class="essay-summary">
+      <h3>Main Argument Summary</h3>
+      <p><strong>Thesis:</strong> <em>Digital Overload</em> critiques how social media has transformed connection into consumption. The visual argument portrays users as both the watchers and the watched, trapped in a cycle of validation and surveillance. Through blue lighting, omnipresent eyes, and layered opacity, the piece symbolizes how digital platforms manipulate attention while feeding on emotional energy. Rather than moralizing, it visualizes the tension between attraction and entrapment in our relationship with technology.</p>
+    </section>
+
+    <section class="essay-chart">
+      <h3>Design Process & Rhetorical Choices</h3>
+      <table class="essay-table">
+        <tr>
+          <th>Design Element</th>
+          <th>Purpose / Meaning</th>
+          <th>Rhetorical Effect</th>
+        </tr>
+        <tr>
+          <td><strong>Blue Color Palette</strong></td>
+          <td>Represents emotional detachment and screen-light addiction.</td>
+          <td>Creates a cold, isolating tone that mirrors overstimulation.</td>
+        </tr>
+        <tr>
+          <td><strong>Eyes Surrounding the Subject</strong></td>
+          <td>Symbolize surveillance and the omnipresence of online judgment.</td>
+          <td>Conveys anxiety and loss of privacy in digital spaces.</td>
+        </tr>
+        <tr>
+          <td><strong>Word “CONSUME”</strong></td>
+          <td>Acts as both a title and a command above the viewer’s head.</td>
+          <td>Critiques the sanctification of consumption in online culture.</td>
+        </tr>
+        <tr>
+          <td><strong>Central Glow of the Phone</strong></td>
+          <td>Brightest point of focus dominating the composition.</td>
+          <td>Visual metaphor for addiction—captures attention completely.</td>
+        </tr>
+        <tr>
+          <td><strong>Layered Opacity of Icons</strong></td>
+          <td>Creates a fog of social-media clutter and constant noise.</td>
+          <td>Mirrors the mental overload caused by endless scrolling.</td>
+        </tr>
+      </table>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Hannah Kim | University of Pittsburgh</p>
+  </footer>
+</body>
+</html>
+
