--- a/project1.html
+++ b/project1.html
@@ -19,27 +19,119 @@
   </nav>
 
   <main class="content">
-    <h2>Project 1 | Digital Rhetorical Analysis</h2>
-    <div class="header-image">
-      <img src="images/valorant_paris.jpg" alt="Valorant Champions Paris 2025 Banner">
-    </div>
-    <h3>Read the Full Essay</h3>
-
-    <div class="pdf-container">
-      <iframe 
-        src="files/BornToBurnFinal.pdf" 
-        width="100%" 
-        height="800px"
-        style="border: none; box-shadow: 0 0 15px #00ffff; border-radius: 10px;">
-      </iframe>
-    </div>
-
+<main class="content">
+  <h2>Project 1 | Digital Rhetorical Analysis</h2>
     <section class="essay-summary">
       <h3>Main Argument Summary</h3>
       <p><strong>Thesis:</strong> Riot Games’ <em>Born to Burn | VALORANT Champions Paris</em> teaser reframes esports competition not as combat but as an act of love and devotion. By combining multilingual dialogue, symbolic imagery, and emotional storytelling, Riot transforms competitive gaming into a global ritual of passion, sacrifice, and community. The video persuades audiences through <strong>ethos</strong> (credibility), <strong>pathos</strong> (emotion), and <strong>logos</strong> (logic) to see esports as both art and shared culture.</p>
     </section>
 
-    <section class="essay-chart">
+  <section class="essay-section">
+    <h4>Introduction</h4>
+    <p>On September 12, 2025, Riot Games released Born to Burn | Valorant Champions Paris
+Opening Tease to promote the VALORANT Champions tournament in Paris. At first glance, the
+video might appear to be a typical esports hype trailer, filled with shots of players and crowds
+designed to generate excitement. Yet closer attention reveals a more ambitious intent. In under
+eight minutes, Riot manages to tell a story not only about a tournament but also about the
+emotional experiences of players, fans, and communities around the world. The teaser uses Paris,
+often known as the “city of love,” as both a literal host city and a symbolic stage. With this
+symbolism, the video reframes competition not simply as combat but as a passionate act of love
+for the game, for their team, and for the struggles itself. This rhetorical shift is significant. Rather
+than leaning on warlike metaphors, as many competitive esports promotions do, Born to Burn
+builds a narrative that emphasizes the language of intimacy, sacrifice, and connection. By doing
+so, Riot transforms the tournament into a cultural event that bridges countries together. Born to
+Burn uses the metaphor of love reinforced through multilingual dialogue, evocative imagery, and
+emotional appeals to persuade their audience that VALORANT Champions Paris is not just an
+esports tournament but a communal act of passion and belonging. Through organizing its
+narrative around defeat, revenge, and brotherhood, and renewal, the teaser positions the
+championship as a global fiery challenge of endurance and love for the game.</p>
+  </section>
+
+  <div class="essay-image">
+    <img src="images/valorant_paris.jpg" alt="Valorant Champions Paris teaser still">
+    <p class="caption">Figure 1. Promotional still from <em>Valorant Champions Paris</em> (2023)</p>
+  </div>
+
+  <section class="essay-section">
+    <h4>Love as Visual Rhetoric</h4>
+    <p>The most striking rhetorical device in the teaser is its framing of love through its visual
+and textual imaging. Early in the video, a character is shot during gameplay. Instead of focusing
+on the violence as many other teasers do, the frame slows, and the words “tomber amoureux”,
+the French word for “fall in love,” appear on the screen (Riot Games). This juxtaposition is
+deliberately placed as the audience would normally expect bloodshed to be framed as brutality.
+Instead, Riot casts it as intimacy. The message is clear: to compete in VALORANT is to fall in
+love with the game, even if it means facing pain and hardship. The question that lingers in the
+audience’s mind is,
+“What does it mean to fall in love with the game?”</p>
+
+    <p>The teaser moves on to answering that question by continuing in narration saying,
+“Defeat after defeat, loss after loss, but now it’s our turn (Riot Games).” Here, love is depicted
+as enduring hardship, persisting through repeated heartbreak. The visuals support this point with
+flashbacks to gameplay highlights and past defeats, showing beloved players at their lowest
+moments only to rise again. By pairing failure with love, Riot suggests that perseverance is a
+form of devotion and that to truly love something means to accept the pain as a foreshadowing of
+joy. To fall in love with the game is to devote your life to it through the moments of hardship.
+The video then transitions by accompanying the phrase “sometimes we kill for love” with a
+VALORANT agent firing a weapon (Riot Games). The camera then cuts immediately to a
+museum in Paris, where teams walk past grand paintings. The rhetorical effect is layered, as in
+the first level, Riot equates the in-game gunplay with the passion of love. On the next level, by
+transitioning directly into the museum, Riot positions esports as part of the cultural sphere of art,
+displaying that VALORANT is not just for entertainment but also an artistic performance worthy
+of reverence.</p>
+  </section>
+
+  <section class="essay-section">
+    <h4>New Beginnings and Regeneration</h4>
+    <p>After the museum scenes, soft visuals of blooming petals and green grass appear. The
+narration states: “Love blooms with new beginnings (Riot Games).” This moment presents a
+sharp contrast to the earlier flames and gunfire. Where fire was destructive, flowers are
+regenerative. The rhetorical point is that esports, like love, is cyclical. The roster changes,
+players come and go, but new journeys are always around the corner. Love survives, and so does
+the competitive spirit. While there may be moments when their passion wanes, their love for the
+game will reignite its spirit, blossoming into another adventure in the game. The closing montage
+ties all these images together. The crowds roar, gameplay flashes across the screen, and the Eiffel
+Tower rises against the Paris skyline. Love, initially depicted as painful, is finally revealed as a
+communal fire of passion.</p>
+  </section>
+
+  <section class="essay-section">
+    <h4>Architecture of Love</h4>
+    <p>Brian Carroll emphasizes that clarity, hierarchy, and the design of information structures
+shape how audiences move through and make sense of content (Writing and Editing for Digital
+Media, Ch. 4). In a digital teaser like this, the architecture is temporal rather than spatial. The
+audience experiences it sequentially, watching words, sounds, and images unfold one after
+another. The order of images, phrases, and scenes creates a narrative arc. Born to Burn follows a
+carefully constructed sequence that mirrors stages of love. The five stages that Riot uses is loss,
+revenge, new beginnings, brotherhood, and a shared fire.</p>
+
+    <ul class="stages">
+      <li><strong>Loss and Sacrifice:</strong> The first stage is loss and sacrifice. The opening lines about defeat and loss, paired with
+“tomber amoureux”, frame love as painful devotion, situating players and fans alike within a
+cycle of heartbreak (Riot Games). To love the game is to sacrifice what you have to achieve the
+dreams of winning and making a name for yourself.</li>
+      <li><strong>Revenge and Resolution:</strong> The second stage is revenge and resolution. In the museum, the narration speaks of
+revenge and giving no mercy. Love is no longer passive endurance but a fierce commitment to
+reclaiming pride. Love is a continuous choice to commit, and in a way, revenge is a strong way
+of showing that commitment to the game. The juxtaposition of fine art with competitive violence
+suggests that revenge, too, has its own artistry.</li>
+      <li><strong>New Beginnings:</strong> The third stage is new beginnings. The field of flowers represents regeneration. The
+narration about roster changes, such as players leaving and joining, frames love as ever-
+renewing. Teams may evolve, doubts may come into play, but in the end, the passion endures.</li>
+      <li><strong>Brotherhood:</strong> The fourth stage is brotherhood. After the flower field scene, Riot introduces a café scene
+in Paris, showing Korean players sitting together and talking. An older teammate tells a younger
+one that he is the future of the team. They reminisce about the bond that they have formed as the
+narration states: “It turns strangers into brothers (Riot Games).” Here, love is framed as
+mentorship, trust, and family.</li>
+      <li><strong>Shared Fire:</strong> The final stage is shared fire. A French voiceover declares, “It unites a single ember into
+a shared fire.” This metaphor brings the arc to completion. Love, once experienced in isolation,
+becomes collective. When the announcer finally declares, “Sixteen of the best teams have
+arrived here in Paris (Riot Games),” the audience sees not only competition but also a global
+communion. This architecture persuades by leading viewers through an emotional journey. By
+the time the montage of players and gameplay appears, audiences are primed to see Champions
+Paris not just as matches but as the culmination of love’s many forms.</li>
+    </ul>
+  </section>
+      <section class="essay-chart">
       <h3>The Five Stages of Love in "Born to Burn"</h3>
       <table class="essay-table">
         <tr>
@@ -74,7 +166,96 @@
         </tr>
       </table>
     </section>
-  </main>
+
+  <section class="essay-section">
+    <h4>Affordances and Audience Participation</h4>
+    <p>While the teaser itself does not allow the viewer to click or navigate, its design builds
+affordances that encourage audience participation. One is multilingual narration and subtitles.
+For example, when the French phrase “tomber amoureux” appears, the English subtitle “Born to
+Burn” appears alongside it (Riot Games). Also, when players from other countries speak in other
+languages, such as Chinese and Korean, subtitles are made available. This linguistic diversity
+underscores the tournament's international character. For native speakers, the phrases carry
+immediate resonance; for others, subtitles foster intrigue and inclusion. The multilingual design
+rhetorically invites global audiences to identify with the story.</p>
+
+    <p>Another affordance is immersive cinematography. Flashbacks of gameplay remind
+audiences of real matches, letting fans relive collective memories. POV-like shots and close-ups
+of players evoke immersion, as if the viewer is sitting alongside the professionals. This style
+allows fans to imagine themselves within the narrative, not merely outside it. Finally, the teaser
+leverages platform affordances. Released on YouTube and social media, the video is designed to
+be shared, commented on, and remixed. Its unfinished narrative, hinting at stories of revenge,
+renewal, and unity without resolution, creates a gap that only the live tournament can fill. This
+rhetorical choice demands that audiences tune in, thus ensuring participation beyond the teaser
+itself.</p>
+  </section>
+
+  <section class="essay-section">
+    <h4>Ethos, Pathos, and Logos</h4>
+    <p>The persuasive force of the teaser rests on the classical appeals of ethos, pathos, and
+logos. Ethos emerges through Riot’s credibility as the game’s developer and tournament
+organizer. By placing the championship in Paris, a city synonymous with romance and culture,
+the video borrows ethos from the location itself. Shots of museums and the Eiffel Tower lend
+prestige, aligning esports with cultural legitimacy. Pathos dominates the teaser. Emotional
+appeals are apparent in every frame, from the anguish of defeat to the joy of brotherhood.
+Phrases like “sometimes we kill for love” and “love blooms with new beginnings” tap into
+universal human emotions, transforming competition into something audiences can feel in their
+own lives (Riot Games). The swelling music, crowd chants, and montage editing amplify this
+pathos, ensuring that viewers leave with their hearts racing. Logos operates more subtly. The
+announcer’s line “16 of the best teams have arrived here in Paris”, provides the logical stakes:
+the world’s top teams are converging, and only one will win. The logical structure of competition
+supports the emotional appeals. Together, these appeals persuade audiences that Champions
+Paris is credible, emotionally significant, and logically essential to watch.</p>
+  </section>
+
+  <section class="essay-section">
+    <h4>Cultural Impact and Ethical Tension</h4>
+    <p>The cultural impact of Born to Burn lies in its redefinition of esports. By framing
+competition as love, Riot elevates gaming into a ritual of passion and belonging. This rhetorical
+move reflects several broader cultural dynamics. First, it showcases the globalization of esports.
+Teams from Korea, China, Europe, and the Americas are all represented, and the multilingual
+narration emphasizes inclusivity. Esports here become a shared ritual that transcends borders.
+Second, it dramatizes the ideology of sacrifice. The notion of being “born to burn” implies that
+greatness requires suffering. While this is inspiring, it also risks glamorizing burnout, a known
+issue in professional gaming. The rhetoric simultaneously motivates and masks the costs of high-
+level competition. Third, it reveals that while love is authentic, it is also branded to be consumed
+by the fans. Fans are encouraged to buy into these narratives not only emotionally but also
+commercially, through merchandise, viewership, and digital items. Finally, it contributes to the
+legitimization of esports as mainstream culture. By situating its story in Paris, a city associated
+with art and romance, Riot argues implicitly that esports belong on the same stage as traditional
+cultural spectacles like the Olympics or World Cup.</p>
+  </section>
+
+  <section class="essay-section">
+    <h4>Conclusion: To Burn Together</h4>
+    <p>Born to Burn | VALORANT Champions Paris Opening Tease is more than a promotional
+video. It is a carefully constructed piece of digital rhetoric that reframes competition as love.
+Through the metaphor of love, Riot persuades audiences that Champions Paris is not just about
+winning games but about experiencing passion, community, and shared fire. The teaser succeeds
+because it appeals simultaneously to ethos, pathos, and logos, while embedding those appeals in
+a narrative architecture that moves from loss to renewal to unity. Its ethical implications,
+however, are complex. By glorifying sacrifice, the video risks normalizing burnout, and by
+commodifying love, it blurs the line between authentic passion and marketable product. Yet
+these very tensions make the teaser culturally significant. It reflects how digital rhetoric in the
+age of esports can transform play into ritual, competition into identity, and a corporate
+tournament into a global narrative of belonging. To love VALORANT, the teaser suggests, is to
+be willing to endure defeat, to seek revenge, to form brotherhood, and to burn together. In Paris,
+the city of love, Riot proclaims that this love will ignite the world.</p>
+  </section>
+
+  <section class="essay-section">
+    <h4>Works Cited</h4>
+    <p>Carroll, Brian. <em>Writing and Editing for Digital Media</em>. 5th ed., Routledge, 2023.<br>
+    Riot Games. <em>Born to Burn | VALORANT Champions Paris Opening Tease</em>. YouTube, 12 Sep. 2025.</p>
+  </section>
+
+  <section class="essay-section">
+    <h4>AI Use Statement</h4>
+    <p>I used AI to help brainstorm potential topics. It suggested analyzing a game trailer, which reminded me of the Valorant tournament. I also used AI for grammar, spelling, and vocabulary checks. It was a useful tool for polishing the final draft and catching errors I missed.</p>
+  </section>
+
+  <div class="pdf-container">
+    <a href="files/BornToBurnFinal.pdf" class="btn" target="_blank">Download Full PDF</a>
+  </div>
 
   <footer>
     <p>© 2025 Hannah Kim | University of Pittsburgh</p>
