--- a/project2.html
+++ b/project2.html
@@ -26,20 +26,31 @@
     <div class="header-image">
       <img src="images/Kim_VisualArgument.jpg" alt="Digital Overload artwork by Hannah Kim">
     </div>
-
-    <h3>Read the Full Essay</h3>
-    <div class="pdf-container">
-      <iframe
-        src="files/Digital Overload Project (2) (1).pdf"
-        width="100%"
-        height="800px"
-        style="border: none; box-shadow: 0 0 15px #00ffff; border-radius: 10px;">
-      </iframe>
-    </div>
-
     <section class="essay-summary">
-      <h3>Main Argument Summary</h3>
-      <p><strong>Thesis:</strong> <em>Digital Overload</em> critiques how social media has transformed connection into consumption. The visual argument portrays users as both the watchers and the watched, trapped in a cycle of validation and surveillance. Through blue lighting, omnipresent eyes, and layered opacity, the piece symbolizes how digital platforms manipulate attention while feeding on emotional energy. Rather than moralizing, it visualizes the tension between attraction and entrapment in our relationship with technology.</p>
+      <h3>Designer Statement</h3>
+      <p>My visual argument, Digital Overload, critiques how social media has transformed
+connection into consumption. It argues that users are not only constantly watched by digital
+platforms, but also conditioned to seek validation through endless scrolling and notification
+loops. The composition centers on a person illuminated by the harsh blue glow of a phone
+screen. That glow represents both attraction and entrapment highlighting that addictive light that
+keeps us staring even when we know it’s draining us. Surrounding the figure are scattered eyes,
+symbols of surveillance, judgment, and others who are similarly addicted. Each one mirrors the
+feeling of being observed online, even in supposed solitude. Behind it all, familiar icons from
+Instagram, Facebook, and other platforms blur into a chaotic fog that erases individuality. One of
+my biggest challenges was getting that chaos to feel intentional. My early drafts were too
+cluttered as I had too many icons, too many eyes, and too much noise. The composition looked
+overwhelming, but not in the purposeful way I wanted. The viewer didn’t know where to look,
+and that confusion weakened the argument. What fixed it was how I reworked the light. I made
+the phone and person the brightest point in the piece and darkened everything else around it as I
+expanded outwards. That glow instantly draws the eye to the center and symbolizes how screens
+dominate our focus. I also made the icons more transparent by lowering the opacity so that they
+could be chaotic without overtaking the scene. Once I found that balance, the image felt
+overwhelming but controlled.I chose a cold blue color palette to emphasize emotional
+detachment. The layered opacity of icons and eyes creates visual noise that mirrors the constant
+flood of notifications and content we face every day. The central figure’s exhaustion captures the
+hidden emotional cost of our digital lives. Overall, making my piece made me think more
+critically about design as communication. I realized that creating digital media isn’t just about
+making something look polished, but it’s about directing emotion and attention.</p>
     </section>
 
     <section class="essay-chart">
@@ -78,6 +89,9 @@
       </table>
     </section>
   </main>
+    <div class="pdf-container">
+        <a href="files/Digital Overload Project (2) (1).pdf" class="btn" target="_blank">Download Full Reflection PDF</a>
+    </div>
 
   <footer>
     <p>© 2025 Hannah Kim | University of Pittsburgh</p>
