--- a/project1.html
+++ b/project1.html
@@ -15,6 +15,8 @@
       <li><a href="about.html">About</a></li>
       <li><a href="project1.html" class="active">Project 1</a></li>
       <li><a href="project2.html">Project 2</a></li>
+      <li><a href="reflection.html">Reflection</a></li>
+
     </ul>
   </nav>
 
