--- a/project2.html
+++ b/project2.html
@@ -16,6 +16,8 @@
       <li><a href="about.html">About</a></li>
       <li><a href="project1.html">Project 1</a></li>
       <li><a href="project2.html" class="active">Project 2</a></li>
+      <li><a href="reflection.html">Reflection</a></li>
+
     </ul>
   </nav>
 
