--- a/about.html
+++ b/about.html
@@ -22,10 +22,16 @@
 
   <main class="content">
     <h2>About Hannah Kim</h2>
+    <section class="about">
     <img src="images/hannah.png" alt="Photo of Hannah Kim" class="about-photo">
-    <p>Hi!! I’m Hannah Kim, a student at the University of Pittsburgh studying digital media, Computer Science, and Data Science. I spend a lot of time in online spaces like Valorant and YouTube, where humor, aesthetics, and connection blend together.</p>
-    <p>My work explores how digital media shapes emotion, identity, and community. I’m fascinated by how online environments can be both exhilarating and exhausting and how we find belonging and meaning in the same spaces that overwhelm us.</p>
-    <p>This portfolio represents my attempt to capture that paradox: being deeply online yet self-aware about its effects.</p>
+    <p>Hi! I’m Hannah Kim, a student at the University of Pittsburgh studying Digital Media, Computer Science, and Data Science. I spend a lot of time in online spaces like Valorant, YouTube, and social platforms where humor, aesthetics, and connection blend together in unpredictable ways. These digital environments have shaped how I think, communicate, and create, and they continue to influence the work I make.</p>
+    <p>My interests lie at the intersection of storytelling, technology, and visual culture. I’m fascinated by how online spaces can be both exhilarating and exhausting—how a single feed can offer comedy, creativity, performance, and anxiety all at once. Growing up deeply immersed in internet culture, I’ve seen firsthand how digital media influences identity, shapes communities, and affects the emotional rhythms of everyday life.</p>
+
+    <p>As a digital media creator, I’m drawn to projects that mix analysis with emotion. Whether I’m breaking down the rhetorical strategies in a Valorant hype trailer, designing a collage that critiques social-media addiction, or building a full website that conveys my digital identity, I try to create things that feel honest to the experience of being young and online.
+    </p>
+    <p>Outside of class, I love experimenting with interface design, building small web projects, and exploring how technology can be used creatively rather than just functionally. My background in CS and Data Science pushes me to understand the technical systems behind the platforms we use, while digital media helps me think about the human side: the aesthetics, emotions, and stories behind the numbers.</p>
+    <p>This portfolio is my attempt to bring all of those interests together. It’s a space where I can showcase my work, reflect on the media that has shaped me, and explore who I am as a digital composer. More than anything, it represents the tension I’ve always felt between loving digital culture and being overwhelmed by it, between participating in online communities and stepping back to analyze them. I hope my work resonates with anyone who has ever felt the same push and pull between connection and overload in their own digital life.</p>
+  </section>
   </main>
 
   <footer>
