--- a/project2.html
+++ b/project2.html
@@ -89,7 +89,81 @@ making something look polished, but it’s about directing emotion and attention
           <td>Mirrors the mental overload caused by endless scrolling.</td>
         </tr>
       </table>
+      <!-- Full Reflection -->
+    <section class="essay-summary">
+      <h3>Reflection: <em>Digital Overload</em></h3>
+      <p><em>Digital Overload</em> explores the psychological and emotional consequences of social media consumption. The core argument is that digital platforms designed to connect us have instead learned to manipulate and consume our attention. Through the metaphor of surveillance and control, the piece suggests that users are both the watchers and the watched—trapped in cycles of validation, distraction, and dependency.</p>
+
+      <p>My visual argument, Digital Overload, explores the psychological and emotional
+consequences of social media consumption. The core argument is that the digital platforms
+designed to connect us have instead learned to manipulate and consume our attention. Through
+the visual metaphor of surveillance and control, the piece suggests that users are both the
+watchers and the watched, trapped in a cycle of validation, distraction, and dependency. My
+target audience is primarily young adults and college students, a generation that has grown up
+immersed in technology and is intimately familiar with the feeling of always being online. The
+purpose of this composition is to critique the culture of constant connectivity and to persuade
+viewers to pause and reflect on how much control social media truly holds over their daily lives.</p>
+      <p>I wanted the image to produce discomfort rather than neutrality. I didn’t want it to look
+like a poster about digital wellness. Instead, I wanted it to feel invasive, to mirror the anxious
+energy of being flooded with notifications and watched by unseen algorithms. The piece operates
+as a visual warning, not by moralizing, but by showing the power imbalance between human
+users and digital systems. Ultimately, the argument is not that technology is evil, but that our
+relationship with it has become parasitic: what once served us now feeds on us.</p>
+      <p>The rhetorical choices I made were to communicate through immediate, emotional
+impact rather than explanation. I thought making a visual image instead of an audio would be
+best in making an immediate impact. The overstimulation of digital life is primarily a sensory
+experience of screens, lights, pings, and endless scrolling, so it made sense to represent that
+through image rather than words. I began with a dark color palette dominated by deep blues and
+blacks to evoke the artificial glow of a screen in a dark room. The central figure, lit only by their
+phone, represents how absorbed we become by our devices, both physically and psychologically. The light on the face is cold and isolating, rather than warm or inviting, to suggest that the
+connection technology promises is ultimately hollow. The word CONSUME arches above the
+person’s head as both a title and a command. Its placement gives it the shape of a halo or a brand,
+symbolizing how consumption has become sanctified in digital culture. The surrounding eyes
+represent the surveillance inherent to online life: advertisers, algorithms, and other users are
+always watching. I wanted them to feel omnipresent, part human, part machine, floating in the
+dark like manifestations of invisible attention. Behind these elements, the logos of popular social
+media fog up the image, just how it fogs up our minds. By visually layering these symbols, I
+aimed to create a sense of digital claustrophobia. Everything in the composition converges
+toward the glowing rectangle of the phone, the brightest point in the image. That central glow
+functions as a visual metaphor for addiction as it captures attention completely, leaving the rest
+of the surroundings dim.</p>
+      <p>My process began with brainstorming different metaphors for digital overstimulation. I
+sketched several ideas in Procreate that involved screens replacing faces with tangled cords
+representing social networks. Eventually, I settled on the motif of the watcher and the watched,
+which led to the idea of surrounding the viewer with eyes and notifications. I used Procreate’s
+layering and blending tools to assemble the composition, experimenting with different brush
+textures and opacity settings to make the lighting look realistic. The most difficult part of the
+process was balancing clutter with clarity. Early drafts looked too visually noisy, which made it
+hard for viewers to focus on the argument. I was able to reduce the noise by changing the opacity
+of the background which also recentered the focus to the man in the center. It was also nice to
+hear feedback from fellow peers during our draft day as I felt encouraged in the direction I took. </p>
+      <p>I used Procreate on an iPad for the design because it allowed me to draw and edit freely
+with precise control. The software gave me flexibility to blend photographic elements with
+hand-drawn textures and to use lighting brushes to create the phone’s blue glow. The easiest part
+of the process was sketching and layering elements since the interface is intuitive and supports
+pressure-sensitive drawing. The most challenging part was achieving a cohesive color balance, as
+Procreate’s lighting effects can easily overpower the composition if overused. I learned how to
+adjust hue, saturation, and Gaussian blur to create depth without flattening the image.</p>
+      <p>Overall, Digital Overload taught me that visual rhetoric is not just about aesthetic
+arrangement but about emotional persuasion. Every light, shadow, and layer of text shapes how
+the viewer feels and interprets meaning. By building this piece in Procreate, I discovered that
+visual design and rhetorical strategy are inseparable. The tools we use to create are also the tools
+we use to argue.</p>
     </section>
+  </section>
+      <section class="essay-summary">
+      <h3>AI Use Statement</h3>
+      <p>I used ChatGPT (OpenAI) during the initial brainstorming stage of this project. I asked the model to help me think through different thematic approaches to understanding how digital technology shapes daily life. The ideas generated included themes such as attention economy, digital identity, and emotional effects of online culture.</p>
+
+      <p>No text, visuals, or design elements from ChatGPT were directly used in my final composition. All writing, visual design, and production decisions are my own. The AI’s role was limited to early-stage ideation and concept clarification, and I critically evaluated all suggestions before incorporating any conceptual direction into the project.</p>
+  </section>
+      <section class="essay-summary">
+      <h3>Works Cited</h3>
+      <p>Google LLC. YouTube Logo. Google Brand Permissions, https://about.google/brand-resource-center/logos-list/youtube-logo/. Accessed 19 Oct. 2025.</p>
+      <p>Meta Platforms, Inc. Facebook Logo and Instagram Logo. Meta Brand Resources, https://about.meta.com/brand/resources/. Accessed 19 Oct. 2025.</p>
+      <p>Meta Platforms, Inc. WhatsApp Logo. WhatsApp Brand Center, https://www.whatsappbrand.com/. Accessed 19 Oct. 2025.</p>
+      <p>X Corp. X Logo. Brand Toolkit, https://about.x.com/en/who-we-are/brand-toolkit. Accessed 19 Oct. 2025.</p>
+  </section>
   </main>
     <div class="pdf-container">
         <a href="files/Digital Overload Project (2) (1).pdf" class="btn" target="_blank">Download Full Reflection PDF</a>
